2011-05-30  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12454]
	* elf/dl-deps.c (_dl_map_object_deps): Run initializer sorting only
	when there are multiple maps.
	* elf/dl-fini.c (_dl_sort_fini): Check for list of one.
	(_dl_fini): Remove test here.

	* elf/rtld.c (dl_main): Don't allow the loader to load itself.

2011-05-29  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12350]
	* sysdeps/posix/getaddrinfo.c (gethosts): Restore only RES_USE_IENT6
	bit from old_res_options.
	(gaih_inet): Likewise.

	[BZ #11099]
	* shadow/sgetspent_r.c (LINE_PARSER): Interpret numeric field values
	as signed.

	* resolv/res_init.c (res_setoptions): Make the code more compact.

	[BZ #11558]
	* resolv/res_init.c (res_setoptions): Recognize use-vc option and
	set RES_USEVC.

	[BZ #11634]
	* elf/Makefile (tests): Don't add tst-audit[67] without working -mavx.

	* malloc/malloc.h: Mark malloc hook variables as deprecated.

	[BZ #11781]
	* malloc/malloc.h: Declare malloc hook variables as volatile.

	* locale/programs/locarchive.c (add_locale_to_archive): Fix typo
	in last patch.

	[BZ #11799]
	* sysdeps/unix/sysv/linux/bits/siginfo.h (SI_USER): Don't mention
	raise in the comment.
	* sysdeps/unix/sysv/linux/s390/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h: Likewise.

2011-05-28  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12811]
	* posix/regex_internal.c (build_wcs_buffer): Don't signal we have to
	grow the buffers more if it already has to be sufficient.
	(build_wcs_upper_buffer): Likewise.
	* posix/regexec.c (check_matching): Likewise.
	(clean_state_log_if_needed): Likewise.
	(extend_buffers): Don't enlarge buffers beyond size of the input
	buffer.
	Patches mostly by Emil Wojak <emil@wojak.eu>.
	* posix/bug-regex32.c: New file.
	* posix/Makefile (tests): Add bug-regex32.

	* locale/findlocale.c (_nl_find_locale): Return right away if
	_nl_explode_name failed.