@@ -1,5 +1,10 @@
 2011-05-30  Ulrich Drepper  <drepper@gmail.com>
 
+	[BZ #12684]
+	* resolv/res_send.c (__libc_res_nsend): Only go to the next name server
+	if both request failed.
+	(send_dg): In case of server errors clear resplen or *resplen2.
+
 	[BZ #12454]
 	* elf/dl-deps.c (_dl_map_object_deps): Run initializer sorting only
 	when there are multiple maps.
